edit: add github-slugger as slug default

--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -212,7 +212,7 @@ You can use all of Zod’s properties and methods with content schemas. This inc
 
 ### Custom entry slugs
 
-By default, Astro will generate a `slug` for each content entry based on its file path.
+By default, Astro will generate a `slug` for each content entry based on its `id` parsed by [github-slugger](https://github.com/Flet/github-slugger).
 
 If you want to generate custom slugs for each entry, you can provide a `slug()` function in `defineCollection()`. Your `slug()` function can use the entry ID, default slug, parsed frontmatter (as `data`), and the raw body of the entry to generate the slug.
 
@@ -290,7 +290,7 @@ const enterprise = await getEntry('blog', 'enterprise.md');
 
 `getCollection()` and `getEntry()` will return entries that include:
  - `id` - a unique ID using the file path relative to `src/content/[collection]`
- - `slug` - a URL-ready slug. Defaults to the ID without the file extension.
+ - `slug` - a URL-ready slug. Defaults to the `id` parsed by [github-slugger](https://github.com/Flet/github-slugger)
  - `data` - an object of frontmatter properties inferred from your collection schema. Defaults to `any` if no schema is configured.
  - `body` - a string containing the raw, uncompiled body of the Markdown or MDX document.
  - `render()` - a function that returns the compiled body of the Markdown or MDX document via the `<Content />` component ([See complete documentation](#rendering-entry-content)).
