Fix unclosed `<br>` tags in MDX

--- a/src/pages/es/reference/configuration-reference.mdx
+++ b/src/pages/es/reference/configuration-reference.mdx
@@ -586,8 +586,8 @@ Astro ofrece flags experimentales para brindar a los usuarios acceso anticipado 
 
 <p>
 
-**Tipo:** `boolean`<br>
-**Por defecto:** `false`<br>
+**Tipo:** `boolean`<br />
+**Por defecto:** `false`<br />
 <Since v="1.7.0" />
 </p>
 
@@ -607,8 +607,8 @@ Para habilitar este comportamiento, establece `experimental.errorOverlay` como `
 
 <p>
 
-**Tipo:** `boolean`<br>
-**Por defecto:** `false`<br>
+**Tipo:** `boolean`<br />
+**Por defecto:** `false`<br />
 <Since v="1.7.0" />
 </p>
 
@@ -628,8 +628,8 @@ Para habilitar este comportamiento, establece `experimental.prerender` como `tru
 
 <p>
 
-**Tipo:** `boolean`<br>
-**Por defecto:** `false`<br>
+**Tipo:** `boolean`<br />
+**Por defecto:** `false`<br />
 <Since v="1.7.0" />
 </p>
 
