Fix MDX comment syntax in new translation

--- a/src/pages/ja/guides/markdown-content.mdx
+++ b/src/pages/ja/guides/markdown-content.mdx
@@ -244,7 +244,7 @@ const props = Astro.props;
 MarkdownファイルやMDXファイルをAstroファイルに直接インポートできます。これにより、そのMarkdownコンテンツや、AstroのJSXライクな式で使用できるfront-matterの値などのプロパティにアクセスできます。
 
 `import`文で特定の1ページを、[`Astro.glob()`](/ja/guides/imports/)で複数のページをインポートできます。
-<!-- TODO: インポートページが更新されたら /ja/guides/imports/#astroglob にリンク先を更新する -->
+{/* TODO: インポートページが更新されたら /ja/guides/imports/#astroglob にリンク先を更新する */}
 
 ```astro title="src/pages/index.astro"
 ---
@@ -434,7 +434,7 @@ Astroは、MarkdownおよびMDXのためのサードパーティの[remark](http
 
 :::tip
 独自のプラグインを追加する場合、Astroのデフォルトプラグインは削除されます。[`markdown.extendDefaultPlugins` フラグ](/ja/reference/configuration-reference/#マークダウンのオプション)でこれらのデフォルトを維持できます。
-<!-- TODO: リファレンスページが更新されたら /ja/reference/configuration-reference/#markdownextenddefaultplugins にリンク先を更新する -->
+{/* TODO: リファレンスページが更新されたら /ja/reference/configuration-reference/#markdownextenddefaultplugins にリンク先を更新する */}
 :::
 
 
