Convert new error page to MDX

--- a/src/pages/en/reference/errors/generate-content-types-error.mdx
+++ b/src/pages/en/reference/errors/generate-content-types-error.mdx
@@ -8,9 +8,8 @@ layout: ~/layouts/MainLayout.astro
 title: Failed to generate content types.
 i18nReady: true
 githubURL: https://github.com/withastro/astro/blob/main/packages/astro/src/core/errors/errors-data.ts
-setup: |
-  import DontEditWarning from '../../../../components/DontEditWarning.astro';
 ---
+import DontEditWarning from '../../../../components/DontEditWarning.astro'
 
 <DontEditWarning />
 
