Fix unclose linebreaks

--- a/src/pages/en/reference/configuration-reference.mdx
+++ b/src/pages/en/reference/configuration-reference.mdx
@@ -374,8 +374,8 @@ If the given port is already in use, Astro will automatically try the next avail
 
 <p>
 
-**Type:** `OutgoingHttpHeaders`<br>
-**Default:** `{}`<br>
+**Type:** `OutgoingHttpHeaders`<br />
+**Default:** `{}`<br />
 <Since v="1.7.0" />
 </p>
 
