--- a/src/pages/en/guides/markdown-content.mdx
+++ b/src/pages/en/guides/markdown-content.mdx
@@ -482,7 +482,7 @@ export default {
 }
 ```
 
-#### Example: Injecting frontmatter
+### Injecting frontmatter
 
 You can add frontmatter properties to all of your Markdown and MDX files by using a [remark or rehype plugin](#markdown-plugins).
 
