new: add tip on `data.astro.frontmatter` default

--- a/src/pages/en/guides/markdown-content.mdx
+++ b/src/pages/en/guides/markdown-content.mdx
@@ -497,6 +497,12 @@ You can add frontmatter properties to all of your Markdown and MDX files by usin
     }
     ```
 
+    :::tip
+    <Since v="2.0.0" />
+
+    `data.astro.frontmatter` contains all properties from a given Markdown or MDX document. This allows you to modify existing frontmatter properties, or compute new properties based on other properties.
+    :::
+
 2. Apply this plugin to your `markdown`  or `mdx` integration config:
 
     ```js title="astro.config.mjs" "import { exampleRemarkPlugin } from './example-remark-plugin.mjs';" "remarkPlugins: [exampleRemarkPlugin],"
