edit: Injecting -> Modifying programmatically

--- a/src/pages/en/guides/markdown-content.mdx
+++ b/src/pages/en/guides/markdown-content.mdx
@@ -482,7 +482,7 @@ export default {
 }
 ```
 
-### Injecting frontmatter
+### Modifying frontmatter programmatically
 
 You can add frontmatter properties to all of your Markdown and MDX files by using a [remark or rehype plugin](#markdown-plugins).
 
