fix: injecting-frontmatter links

--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -390,9 +390,9 @@ const blogPosts = await getCollection('blog');
 })}
 ```
 
-### Access injected frontmatter from `render()`
+### Access modified frontmatter from `render()`
 
-Astro allows you to [inject frontmatter using remark or rehype plugins.](/en/guides/markdown-content/#example-injecting-frontmatter) You can access these values using the `injectedFrontmatter` property from `render()`:
+Astro allows you to [modify frontmatter using remark or rehype plugins](/en/guides/markdown-content/#modifying-frontmatter-programmatically). You can access this modified frontmatter using the `injectedFrontmatter` property from `render()`:
 
 ```astro "{ injectedFrontmatter }"
 ---
