new: caution on remark / rehype plugin defaults

--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -408,6 +408,10 @@ const blogPosts = await getCollection('blog');
 
 Assuming `readingTime` was injected ([see our reading time example](/en/guides/markdown-content/#example-calculate-reading-time)), it will be available on the `injectedFrontmatter` object.
 
+:::caution
+Remark and rehype plugins will have access to the _raw_ Markdown or MDX document frontmatter. This means frontmatter will not reflect any changes or defaults applied by your `schema`.
+:::
+
 <details>
 <summary>**🙋 Why don't `getCollection()` and `getEntry()` contain these values?**</summary>
 
