edit: injectedFrontmatter -> remarkPluginFrontmatter

--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -341,14 +341,14 @@ const { post } = Astro.props;
 
 ## Rendering entry content
 
-Every collection entry includes a `render()` function that gives you access to the contents of the Markdown or MDX file. This includes a `<Content />` component for rendering the document body, as well as the document headings and injected frontmatter.
+Every collection entry includes a `render()` function that gives you access to the contents of the Markdown or MDX file. This includes a `<Content />` component for rendering the document body, as well as the document headings and frontmatter modified via remark or rehype.
 
 ```astro {5}
 ---
 // src/pages/render-example.astro
 import { getEntry } from 'astro:content';
 const entry = await getEntry('blog', 'post-1.md');
-const { Content, headings, injectedFrontmatter } = await entry.render();
+const { Content, headings, remarkPluginFrontmatter } = await entry.render();
 ---
 ```
 
@@ -392,21 +392,21 @@ const blogPosts = await getCollection('blog');
 
 ### Access modified frontmatter from `render()`
 
-Astro allows you to [modify frontmatter using remark or rehype plugins](/en/guides/markdown-content/#modifying-frontmatter-programmatically). You can access this modified frontmatter using the `injectedFrontmatter` property from `render()`:
+Astro allows you to [modify frontmatter using remark or rehype plugins](/en/guides/markdown-content/#modifying-frontmatter-programmatically). You can access this modified frontmatter using the `remarkPluginFrontmatter` property from `render()`:
 
-```astro "{ injectedFrontmatter }"
+```astro "{ remarkPluginFrontmatter }"
 ---
 import { getCollection } from 'astro:content';
 const blogPosts = await getCollection('blog');
 ---
 
 {blogPosts.map(async (post) => {
-  const { injectedFrontmatter } = await post.render();
-  return <p>{post.data.title} — {injectedFrontmatter.readingTime}</p>
+  const { remarkPluginFrontmatter } = await post.render();
+  return <p>{post.data.title} — {remarkPluginFrontmatter.readingTime}</p>
 })}
 ```
 
-Assuming `readingTime` was injected ([see our reading time example](/en/guides/markdown-content/#example-calculate-reading-time)), it will be available on the `injectedFrontmatter` object.
+Assuming `readingTime` was injected ([see our reading time example](/en/guides/markdown-content/#example-calculate-reading-time)), it will be available on the `remarkPluginFrontmatter` object.
 
 :::caution
 Remark and rehype plugins will have access to the _raw_ Markdown or MDX document frontmatter. This means frontmatter will not reflect any changes or defaults applied by your `schema`.
