fix: Since import

--- a/src/pages/de/guides/markdown-content.mdx
+++ b/src/pages/de/guides/markdown-content.mdx
@@ -4,6 +4,8 @@ title: Markdown
 description: Verwendung von Markdown mit Astro
 ---
 
+import Since from '~/components/Since.astro'
+
 Markdown wird häufig verwendet, um textlastige Inhalte wie Blog-Beiträge und Dokumentationen zu erstellen. Astro bietet eine integrierte Unterstützung von Markdown mit einigen zusätzlichen Funktionen wie der Verwendung von JavaScript-Ausdrücken und Astro-Komponenten direkt in deinem Markdown.
 
 ## Markdown-Seiten
