--- a/src/pages/en/reference/api-reference.mdx
+++ b/src/pages/en/reference/api-reference.mdx
@@ -830,7 +830,7 @@ A function to compile a given Markdown or MDX document for rendering. This retur
 
 - `<Content />` - A component used to render the document's contents in an Astro file.
 - `headings` - A generated list of headings, [mirroring Astro's `getHeadings()` utility](/en/guides/markdown-content/#exported-properties) on Markdown and MDX imports.
-- `remarkPluginFrontmatter ` - The [modified frontmatter object](/en/guides/markdown-content/#modifying-frontmatter-programmatically) applied via remark or rehype plugins. Set to type `any`.
+- `remarkPluginFrontmatter ` - The modified frontmatter object after any [remark or rehype plugins have been applied](/en/guides/markdown-content/#modifying-frontmatter-programmatically). Set to type `any`.
 
 ```astro
 ---
