--- a/src/pages/en/guides/markdown-content.mdx
+++ b/src/pages/en/guides/markdown-content.mdx
@@ -501,7 +501,7 @@ You can add frontmatter properties to all of your Markdown and MDX files by usin
     :::tip
     <Since v="2.0.0" />
 
-    `data.astro.frontmatter` contains all properties from a given Markdown or MDX document. This allows you to modify existing frontmatter properties, or compute new properties based on other properties.
+    `data.astro.frontmatter` contains all properties from a given Markdown or MDX document. This allows you to modify existing frontmatter properties, or compute new properties from this existing frontmatter.
     :::
 
 2. Apply this plugin to your `markdown`  or `mdx` integration config:
