--- a/src/pages/ja/concepts/islands.mdx
+++ b/src/pages/ja/concepts/islands.mdx
@@ -1,7 +1,9 @@
 ---
 layout: ~/layouts/MainLayout.astro
 title: Astroアイランド
-description: "Astroアイランド（別名：コンポーネントアイランド）は、Astroが開拓したWebアーキテクチャーのパターンの1つです。「アイランドアーキテクチャ」は、2019年にEtsyのフロントエンドアーキテクトKatie Sylor-Millerによって初めて作られ、Preactの作者、Jason Millerによって広まりました。"
+description: >-
+  Astroアイランド（別名：コンポーネントアイランド）は、Astroが開拓したWebアーキテクチャーのパターンの1つです。「アイランドアーキテクチャ」は、2019年にEtsyのフロントエンドアーキテクトKatie
+  Sylor-Millerによって初めて作られ、Preactの作者、Jason Millerによって広まりました。
 i18nReady: true
 ---
 
