Fix broken links

--- a/src/pages/ja/guides/typescript.mdx
+++ b/src/pages/ja/guides/typescript.mdx
@@ -7,9 +7,9 @@ i18nReady: true
 
 import Since from '~/components/Since.astro'
 
-Astroには[TypeScript](https://www.typescriptlang.org/)のサポートが組み込まれています。Astroプロジェクトで`.ts`や`.tsx`ファイルをインポートしたり、[Astroコンポーネント](/ja/core-concepts/astro-components/#the-component-script)の中で直接TypeScriptコードを書いたり、お好みで[`astro.config.ts`](/en/guides/configuring-astro/#the-astro-config-file)ファイルを使うこともできます。
+Astroには[TypeScript](https://www.typescriptlang.org/)のサポートが組み込まれています。Astroプロジェクトで`.ts`や`.tsx`ファイルをインポートしたり、[Astroコンポーネント](/ja/core-concepts/astro-components/#コンポーネントスクリプト)の中で直接TypeScriptコードを書いたり、お好みで[`astro.config.ts`](/ja/guides/configuring-astro/#astroの設定ファイル)ファイルを使うこともできます。
 
-TypeScriptにより、オブジェクトやコンポーネントの形状（shape）をコードで定義して実行時エラーを防ぐことができます。たとえば、TypeScriptで[コンポーネントのpropsに型を付ける](#component-props)と、コンポーネントが受け付けないpropを設定した場合にエディタ内にエラーが発生します。
+TypeScriptにより、オブジェクトやコンポーネントの形状（shape）をコードで定義して実行時エラーを防ぐことができます。たとえば、TypeScriptで[コンポーネントのpropsに型を付ける](#コンポーネントprops)と、コンポーネントが受け付けないpropを設定した場合にエディタ内にエラーが発生します。
 
 AstroプロジェクトでTypeScriptコードを書かなくても、その恩恵を受けられます。Astroは常にコンポーネントのコードをTypeScriptとして扱い、[Astro VSCode拡張機能](/ja/editor-setup/)は自動補完やヒント、エラーをエディタ内で提供するためにできる限りの推論を行います。
 
