--- a/src/pages/en/reference/configuration-reference.mdx
+++ b/src/pages/en/reference/configuration-reference.mdx
@@ -546,7 +546,20 @@ Pass additional configuration options to Vite. Useful when Astro doesn't support
 
 View the full `vite` configuration object documentation on [vitejs.dev](https://vitejs.dev/config/).
 
+A common use case is to pass a package name to [`vite.ssr.noExternal`](https://vitejs.dev/config/ssr-options.html#ssr-noexternal) to prevent it from being externalized.
+
 #### Examples
+
+```js
+{
+  vite: {
+    ssr: {
+      // Example: Force a broken package to be transformed for SSR
+      noExternal: ['broken-npm-package'],
+    }
+  }
+}
+```
 
 ```js
 {
