--- a/src/pages/en/guides/migrate-to-astro/from-eleventy.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-eleventy.mdx
@@ -16,7 +16,8 @@ Eleventy (11ty) and Astro share some similarities that will help you migrate you
 
 - Both Astro and Eleventy allow you to author your content in Markdown files, or fetch content from a CMS.
 
-- Both Astro and Eleventy use file-based routing.
+
+- Both Astro and Eleventy build [multi-page apps](/en/concepts/mpa-vs-spa/).
 
 ## Key Differences between Eleventy (11ty) and Astro
 
