adding link to mpa vs spa
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/src/pages/en/guides/migrate-to-astro/from-sveltekit.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-sveltekit.mdx
@@ -22,7 +22,7 @@ SvelteKit and Astro share some similarities that will help you migrate your proj
 
 When you rebuild your SvelteKit site in Astro, you will notice some important differences:
 
-- SvelteKit is a Svelte-based SPA (single-page application). Astro sites are multi-page apps built using `.astro` components, but can also support React, Preact, Vue.js, Svelte, SolidJS, AlpineJS, Lit and raw HTML templating.
+- SvelteKit is a Svelte-based SPA (single-page application). Astro sites are [multi-page apps](/en/concepts/mpa-vs-spa/) built using `.astro` components, but can also support React, Preact, Vue.js, Svelte, SolidJS, AlpineJS, Lit and raw HTML templating.
 
 - Astro was designed primarily for content-focused sites. An existing SvelteKit app might be built for high client-side interactivity and may include items that are difficult to replicate in Astro, such as dashboards.
 
