export direction typo
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/src/pages/en/guides/migrate-to-astro/from-wordpress.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-wordpress.mdx
@@ -39,7 +39,7 @@ You can continue to [use your existing WordPress blog as your CMS for Astro](/en
 
 You may wish to take [Astro's Build a Blog Tutorial](/en/tutorial/0-introduction/) if you are new to working in a code editor and using GitHub to store and deploy your site. It will walk you through all the accounts and setup you need! You will also learn how to build Astro components yourself, and it will show you how to add blog posts directly in Astro if choose not to use WordPress for your content.
 
-If you want to move all of your existing post content to Astro, you may find this [tool for exporting Markdown to WordPress helpful](https://github.com/lonekorean/wordpress-export-to-markdown). This may be enough for most sites, but you may need to make some adjustments to the result if you have to [convert a large or complicated WordPress site to Markdown](https://swizec.com/blog/how-to-export-a-large-wordpress-site-to-markdown/).
+If you want to move all of your existing post content to Astro, you may find this [tool for exporting Markdown from WordPress helpful](https://github.com/lonekorean/wordpress-export-to-markdown). This may be enough for most sites, but you may need to make some adjustments to the result if you have to [convert a large or complicated WordPress site to Markdown](https://swizec.com/blog/how-to-export-a-large-wordpress-site-to-markdown/).
 
 To convert other types of sites, such as a portfolio or documentation site, see more official starter templates on [astro.new](https://astro.new) with links to a GitHub repository as well as one-click links to open a working project in StackBlitz, CodeSandbox and Gitpod online development environments.
 
