--- a/src/pages/en/guides/migrate-to-astro/from-gridsome.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-gridsome.mdx
@@ -32,7 +32,7 @@ When you rebuild your Gridsome site in Astro, you will notice some important dif
 
 To convert a Gridsome blog to Astro, start with our blog theme starter template, or explore more community blog themes in our [theme showcase](https://astro.build/themes/). Bring your existing Markdown (or MDX, with our optional integration) files as content to [create Markdown or MDX pages](/en/guides/markdown-content/).
 
-Since Gridsome's project structure is similar to Astro's, you may be able to copy several existing files from your project into the same location in your new Astro project. However, the two project structures are not identical. You may want to examine [Astro's project structure](/en/core-concepts/project-structure/) to see what the difference are.
+Since Gridsome's project structure is similar to Astro's, you may be able to copy several existing files from your project into the same location in your new Astro project. However, the two project structures are not identical. You may want to examine [Astro's project structure](/en/core-concepts/project-structure/) to see what the differences are.
 
 Since Astro queries and imports from your local files differently than Gridsome, you may want to read about [how Astro queries and import from local files using `Astro.glob()`](/en/guides/imports/#astroglob) to understand how to work with your local files.
 
