--- a/src/pages/en/guides/migrate-to-astro/from-sveltekit.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-sveltekit.mdx
@@ -3,7 +3,7 @@ title: Migrating from SvelteKit
 description: Tips for migrating an existing Sveltekit project to Astro
 layout: ~/layouts/MigrationLayout.astro
 stub: true
-framework: Sveltekit
+framework: SvelteKit
 ---
 
 [SvelteKit](https://kit.svelte.dev) is a framework for building web applications on top of Svelte.
