--- a/src/pages/en/guides/migrate-to-astro/from-gridsome.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-gridsome.mdx
@@ -34,7 +34,7 @@ To convert a Gridsome blog to Astro, start with our blog theme starter template,
 
 Since Gridsome's project structure is similar to Astro's, you may be able to copy several existing files from your project into the same location in your new Astro project. However, the two project structures are not identical. You may want to examine [Astro's project structure](/en/core-concepts/project-structure/) to see what the differences are.
 
-Since Astro queries and imports from your local files differently than Gridsome, you may want to read about [how Astro queries and import from local files using `Astro.glob()`](/en/guides/imports/#astroglob) to understand how to work with your local files.
+Since Astro queries and imports your local files differently than Gridsome, you may want to read about [how to load files using `Astro.glob()`](/en/guides/imports/#astroglob) to understand how to work with your local files.
 
 To convert other types of sites, such as a portfolio or documentation site, see more official starter templates on [astro.new](https://astro.new) with links to a GitHub repository as well as one-click links to open a working project in StackBlitz, CodeSandbox and Gitpod online development environments.
 
