--- a/src/pages/en/guides/migrate-to-astro/from-hugo.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-hugo.mdx
@@ -24,7 +24,7 @@ Hugo and Astro share some similarities that will help you migrate your project:
 
 When you rebuild your Hugo site in Astro, you will notice some important differences:
 
-- Hugo uses Go for page templating. Astro syntax is a JSX-like superset of HTML.
+- Hugo uses Go for page templating. [Astro syntax](/en/core-concepts/astro-components/) is a JSX-like superset of HTML.
 
 - Hugo sites are created using Markdown (`.md`) files for page content and HTML (`.html`) templates for layout. Astro is component-based, and uses Astro components, which include HTML templating for pages, layouts and individual UI elements. Astro can also create pages from `.md` and `.mdx` files, using an Astro layout component for wrapping Markdown content in a page template.
 
