more accurate pelican!
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/src/pages/en/guides/migrate-to-astro/from-pelican.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-pelican.mdx
@@ -20,7 +20,9 @@ Pelican and Astro share some similarities that will help you migrate your projec
 
 When you rebuild your Pelican site in Astro, you will notice some important differences:
 
-- Pelican can process HTML (`.html`) files for page content. Astro can create pages from `.astro` files, which are written using a syntax that is a superset of HTML. You can write `.astro` files using exclusively valid HTML. But, `.html` files are not recognized by Astro.
+- Pelican supports writing content in Markdown and reStructured Text (`.rst`). Astro supports creating pages from Markdown and MDX files, but does not support reStructured Text.
+
+- Pelican uses HTML files and Jinja syntax for templating. Astro uses `.astro` files, which are written using a syntax that is a superset of HTML. All valid HTML is valid `.astro` syntax.
 
 - Pelican was designed to build content-rich websites like blogs and has some built-in, blog features that you would have to build yourself in Astro. Instead, Astro offers some of these features included in an [official blog theme](https://github.com/withastro/astro/tree/latest/examples/blog).
 
