better than meh! (may revisit)
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/src/pages/en/guides/migrate-to-astro.mdx
+++ b/src/pages/en/guides/migrate-to-astro.mdx
@@ -39,9 +39,9 @@ Astro allows you to choose between a statically-generated site and [server-side 
 
 ## How will my project design change?
 
-When you migrate to Astro, you will think about the individual pieces of your site: which elements are static? which are dynamic? which are interactive? which ones really need to communicate with others?
+When you migrate to Astro, you will have the chance to optimize how your site is built. If you were using a dynamic client-side UI framework like React for static markup, Astro will let you reuse your components while shipping less JavaScript. You may also find you need to think about client-side interactivity and state management slightly differently.
 
-This may have you rethinking how you design your site as you build with Astro:
+Below are some common things you may need to think about as you build with Astro.
 
 ### Use JavaScript vs Ship JavaScript
 
