Document Astro.cookie usage

--- a/src/pages/en/guides/server-side-rendering.mdx
+++ b/src/pages/en/guides/server-side-rendering.mdx
@@ -121,6 +121,30 @@ The features below are only available at the page level. (You can't use them ins
 This is because these features modify the [Response headers](https://developer.mozilla.org/en-US/docs/Glossary/Response_header), which can't be modified after they're sent to the browser. In SSR mode, Astro uses HTML streaming to send each component to the browser as it renders them. This makes sure the user sees your HTML as fast as possible, but it also means that by the time Astro runs your component code, it has already sent the Response headers.
 :::
 
+### `Astro.cookies`
+
+On the `Astro` global, this interface allows to manipulate cookies. It allows to directly get them from requests and set them in responses. Whereas `Astro.request.headers.get('cookie')` gets all cookies and still need to be parsed, `Astro.cookies.get` gets a single cookie in an object.
+
+This example shows how to update the value of a counter cookie
+
+```astro title="src/pages/index.astro" {4,10}
+---
+let counter = 0
+
+const cookie = Astro.cookies.get("counter")
+
+if(cookie.value != undefined){
+	counter = parseInt(cookie.value) + 1
+}
+
+Astro.cookies.set("counter",counter)
+
+---
+<html>
+  <h1>Counter = {counter}</h1>
+</html>
+```
+
 ### `Astro.redirect`
 
 On the `Astro` global, this method allows you to redirect to another page. You might do this after checking if the user is logged in by getting their session from a cookie.
