added reference to the API reference

--- a/src/pages/en/guides/server-side-rendering.mdx
+++ b/src/pages/en/guides/server-side-rendering.mdx
@@ -125,7 +125,9 @@ This is because these features modify the [Response headers](https://developer.m
 
 On the `Astro` global, this interface allows to manipulate cookies. It allows to directly get them from requests and set them in responses. Whereas `Astro.request.headers.get('cookie')` gets all cookies and still need to be parsed, `Astro.cookies.get` gets a single cookie in an object.
 
-This example shows how to update the value of a counter cookie
+More details about the API in the reference [Astro.cookies](/en/reference/api-reference/#astrocookies)
+
+The example below shows how to update the value of a counter cookie.
 
 ```astro title="src/pages/index.astro" {4,10}
 ---
