f5c9ed08f0d3e0099051429cc37013c8984d2ce2

--- a/src/pages/ja/core-concepts/astro-components.mdx
+++ b/src/pages/ja/core-concepts/astro-components.mdx
@@ -165,7 +165,7 @@ function handleClick () {
 ---
 // do-this-instead.astro
 ---
-<button id="button">Click Me</div>
+<button id="button">Click Me</button>
 <script>
   function handleClick () {
     console.log("ボタンがクリックされました！");
