77d098d089b65f8ddc21038d8bd17ca76f5de420

--- a/src/pages/ja/core-concepts/astro-components.mdx
+++ b/src/pages/ja/core-concepts/astro-components.mdx
@@ -474,60 +474,31 @@ CSSの `<style>` タグも、コンポーネントテンプレートの内部で
 
 ## クライアントサイドスクリプト
 
-[フレームワークコンポーネント](/ja/core-concepts/framework-components/) (React, Svelte, Vue, Preact, SolidJS, AlpineJS, Lit) や [Astroインテグレーション](https://astro.build/integrations/) (astro-XElement 等) を使わずにブラウザに JavaScript を送信するには、Astro コンポーネントのテンプレートで `<script>` タグを使ってグローバルスコープ内で実行されるJavaScriptをブラウザに送信してください。
+Astroコンポーネントでは、標準的なHTMLの`<script>`タグを使用してクライアントサイドにインタラクティビティを追加することができます。
 
-デフォルトでは、`<script>` タグはAstroによって処理されます。
-
-- インポートされたものはバンドルされ、ローカルファイルやNodeモジュールのインポートができます。
-- 処理されたスクリプトは、ページの `<head>` に [`type="module"`](https://developer.mozilla.org/ja/docs/Web/JavaScript/Guide/Modules) と共に挿入されます。
-- TypeScriptを完全にサポートし、TypeScriptファイルのインポートを含みます。
-- コンポーネントがページ内で何度も使用される場合、scriptタグは一度だけ含まれます。
+スクリプトは、イベントリスナーの追加、解析したデータの送信、アニメーションの再生など、JavaScriptがWeb上で実行できるあらゆることに使用できます。
 
 ```astro
+// src/components/ConfettiButton.astro
+<button data-confetti-button>お祝いする</button>
+
 <script>
-  // 処理、バンドルされます。TypeScript対応。npmパッケージに対してもESMのインポートできます。
+  // npmモジュールをインポートする。
+  import confetti from 'canvas-confetti';
+
+  // ページ内のコンポーネントDOMを見つける。
+  const buttons = document.querySelectorAll('[data-confetti-button]');
+
+  // ボタンがクリックされたときに紙吹雪（confetti）を発生させるイベントリスナーを追加します。
+  buttons.forEach((button) => {
+    button.addEventListener('click', () => confetti());
+  });
 </script>
 ```
 
-スクリプトをバンドルしないようにするには、 `is:inline` 属性を使用します。
+Astroはデフォルトで`<script>`タグを処理・バンドルし、npmモジュールのインポートやTypeScriptの記述などをサポートします。
 
-```astro "is:inline"
-<script is:inline>
-  // 書かれたとおりにHTMLにレンダリングされます!
-  // ESM import はファイルからの相対パスで解決されません。
-</script>
-```
-
-上記の方法を組み合わせることで、同じ `.astro` ファイルに複数の `<script>` タグを使用できます。
-
-:::note
-`<script>`タグに`type="module"`やその他の属性を追加すると、Astroのデフォルトのバンドル動作が無効になり、`is:inline`ディレクティブがあるかのようにタグが処理されます。
-:::
-
-📚 `<script>` タグで使用できるディレクティブの詳細については、[ディレクティブリファレンス](/ja/reference/directives-reference/#script--style-directives)を参照してください。
-
-### 外部スクリプトの読み込み
-
-**使用するタイミング:** JavaScriptファイルが `public/` 内にある場合。
-
-この方法では、以下に説明する `import` メソッドを使用したときに、Astroが提供するJavaScriptの処理、バンドル、最適化をスキップすることに注意してください。
-
-```astro
-// 絶対URLパス
-<script is:inline src="/some-external-script.js"></script>
-```
-### `src/`に配置されたスクリプトを使用する
-
-**使用するタイミング:** 外部スクリプトが `src/` 内にあり、かつ、ESMモジュールタイプをサポートしている場合。
-
-Astroは、これらのJavaScriptクライアントサイドインポートを検出し、自動的にJSをビルド・最適化してページに追加します。
-
-```astro
-// ESM import
-<script>
-  import './some-external-script.js';
-</script>
-```
+📚 詳細については[スクリプトのガイド](/ja/guides/client-side-scripts/)を参照してください。
 
 ## HTMLコンポーネント
 
