shorten landing page re designing

--- a/src/pages/en/guides/migrate-to-astro.mdx
+++ b/src/pages/en/guides/migrate-to-astro.mdx
@@ -39,34 +39,11 @@ Astro allows you to choose between a statically-generated site and [server-side 
 
 ## How will my project design change?
 
-When you migrate to Astro, you will have the chance to optimize how your site is built. If you were using a dynamic client-side UI framework like React for static markup, Astro will let you reuse your components while shipping less JavaScript. You may also find you need to think about client-side interactivity and state management slightly differently.
+Depending on your existing project, you may need to think differently about:
 
-Below are some common things you may need to think about as you build with Astro.
+- Designing in [Astro Islands](/en/concepts/islands/#what-is-an-astro-island) to avoid sending unnecessary JavaScript to the browser.
 
-### Use JavaScript vs Ship JavaScript
+- Providing client-side interactivity with [client-side `<script>` tags](/en/guides/client-side-scripts/) or [UI framework components](/en/core-concepts/framework-components/).
 
-Astro **uses JavaScript** to build your site, but this is done on the server and most of this JavaScript never makes it to the client. Astro only **ships JavaScript** for the parts of your site which require client-side interactivity. 
+- Managing [shared state](/en/core-concepts/sharing-state/) with nanostores or local storage instead of app-wide hooks or wrappers.
 
-Your existing project may use a JS framework that ships JavaScript to the browser to build even the static presentation of your site.
-
-This means your Astro project is not written as JS-based functions that return templating. Instead, your `.astro` files contain a code fence to "fence off" the JavaScript required to build each component. When outside of the code fence, you are writing the HTML templating that you want to render on the page.
-
-```astro
----
-// JavaScript goes here and stays on the server
----
-
-<p>Markup goes here, and is shipped to the client</p>
-```
-
- ### Design for islands of interactivity
-
- Astro's focus is shipping as little JavaScript as necessary [via its island architecture](/en/concepts/islands/#what-is-an-astro-island), so it is well-suited to sites where client-side interactivity is localized to particular components.
-
- This will affect your design decisions as you choose solutions for interactivity such as [client-side `<script>` tags](/en/guides/client-side-scripts/) or [UI framework components](/en/core-concepts/framework-components/).
- 
- ### Solutions for State, Context and Data Persistence
- 
- An Astro site is a [Multi-Page Application (MPA)](/en/concepts/mpa-vs-spa/) framework: each route is its own new page of HTML retrieved from the server. This means that your app is not wrapped with any shared state or context. 
- 
-When data needs to be shared between Astro Islands or persist across pages, you will design with [solutions for sharing state](/en/core-concepts/sharing-state/) like nanostores or local storage instead of app-wide hooks or wrappers.
