nanostores -> Nano Stores

--- a/src/pages/en/guides/migrate-to-astro.mdx
+++ b/src/pages/en/guides/migrate-to-astro.mdx
@@ -45,5 +45,5 @@ Depending on your existing project, you may need to think differently about:
 
 - Providing client-side interactivity with [client-side `<script>` tags](/en/guides/client-side-scripts/) or [UI framework components](/en/core-concepts/framework-components/).
 
-- Managing [shared state](/en/core-concepts/sharing-state/) with nanostores or local storage instead of app-wide hooks or wrappers.
+- Managing [shared state](/en/core-concepts/sharing-state/) with Nano Stores or local storage instead of app-wide hooks or wrappers.
 
